docs/1.8/SelfSubjectRulesReview.md
# SelfSubjectRulesReview

* [write operations](#write)

## write

### apis.authorization.k8s.io.v1.selfsubjectrulesreviews.post

create a SelfSubjectRulesReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.api.authorization.v1.SelfSubjectRulesReview |

### apis.authorization.k8s.io.v1beta1.selfsubjectrulesreviews.post

create a SelfSubjectRulesReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.api.authorization.v1beta1.SelfSubjectRulesReview |

